--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 </head>
 
 <body>
-    <form action="" method="post">
+    <form action="https://formspree.io/dommin5@interia.pl" method="POST">
         <label for="name">Imię</label><br>
-        <input type="text" id="name" placeholder="Wpisz imię"><br>
+        <input type="text" id="name" name ="name" placeholder="Wpisz imię"><br>
         
         <br><label>Nazwisko<br><input type="surname" placeholder="Wpisz nazwisko"></label><br>
-        <br><label>Email<br><input type="email" placeholder="Wpisz adres email"></label><br>
+        <br><label>Email<br><input type="email" name="replyto" placeholder="Wpisz adres email"></label><br>
         <br><label>Numer telefonu<br><input type="tel" placeholder="Wpisz numer telefonu"></label><br>
         
-        <br><br><input type="submit" value="Wyślij wiadomość">
+        <br><br><input type="submit" value="Send">
     </form>
 </body>
 
