--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <form action="https://formspree.io/dommin5@interia.pl" method="POST">
+    <form action="https://formspree.io/domind1823@gmail.com" method="POST">
         <label for="name">Imię</label><br>
         <input type="text" id="name" name ="name" placeholder="Wpisz imię"><br>
         
